Fix background overflowing

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,4 @@
-html,
+/* html,
 body {
   height: 100%;
   margin: 0;
@@ -12,4 +12,4 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
-}
+} */
